# pankosmia-web

./: .dockerignore  .gitignore  Cargo.toml  Crate_README.md  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
app_resources/product/: product.json
app_resources/setup/: app_setup.json  local_setup.json
app_resources/templates/: app_state.json  i18n.json  user_settings.json
catalog/: languages.yaml
docs/: API_ROUTES.md  ARCHITECTURE.md  CATALOG_REPO_TEMPLATE.md  CLIENT_INTEGRATION.md  CLIENT_WRAPPER_GUIDE.md  DATA_MODEL.md  DECISIONS.md  HOSTING.md  INDEX.md  PER_LANGUAGE_USER_STATE.md  SCALING.md  SECURITY.md  USER_LANGUAGES.md
docs/dev/: ARCHITECTURE.md  CATALOG_REPO_TEMPLATE.md  CLIENT_WRAPPER_GUIDE.md  DATA_MODEL.md  DECISIONS.md  PER_LANGUAGE_USER_STATE.md  SCALING.md  SECURITY.md
docs/impl/: AUDIO_STRATEGY.md  BULK_OPS.md  USER_STATE_FUTURE.md
scripts/: entrypoint.sh
src/: identity.rs  lib.rs  main.rs  static_vars.rs  structs.rs  tests.rs
src/auth/: auth_user.rs  github_app.rs  github_client.rs  jwks.rs  language_context.rs  mod.rs  oauth_flow.rs  require_role.rs  session.rs  token_store.rs
src/catalog/: discovery.rs  mod.rs  registry.rs  schema.rs  sync.rs  webhook.rs
src/endpoints/: clients.rs  error.rs  health.rs  mod.rs  navigation.rs  user_languages.rs  user_resources.rs  version.rs
src/gitea/: cache.rs  client.rs  config.rs  mod.rs  routing.rs
src/server/: git_dispatch.rs  locks.rs  mod.rs  periodic_fetch.rs  pools.rs  rate_limit.rs  watcher_registry.rs
src/store/: blob_store.rs  git_workspace.rs  mod.rs  paths.rs  project_store.rs  selector.rs  sqlite_user_state.rs  types.rs
src/utils/: bcv_ref.rs  bootstrap.rs  json.rs  (+11 more)
tests/: fs_language_store.rs  sse_ingredient.rs
(+92 files in other folders)
