[package]
name = "pankosmia_docker"
description = "Hosted Pankosmia server: GitHub-backed multi-language Bible-translation collaboration."
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/larsgson/pankosmia-docker"
readme = "Crate_README.md"

exclude = [
    "webfonts/*"
]

[lib]
name = "pankosmia_docker"
crate-type = [
    "lib"
]
path = "src/lib.rs"

[dependencies]
boon = "0.6.1"
chksum-md5 = "0.1.0"
chrono = "0.4.41"
copy_dir = "0.1.3"
ffmpeg-sidecar = "2.1.0"
git2 = "0.20.2"
home = "0.5.11"
mime-infer= "4.0.1"
md5 = "0.8"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.47.0"
ureq = { version = "2.12.1", features = ["json"] }
uuid = {  version = "1.18.0", features = ["v4", "v5", "serde"] }
walkdir = "2.5.0"
time = "0.3.37"
whoami = "1.6.1"
zip = "7.0.0"
tempfile = "3.24.0"
pankosmia_rag_chat = {version = "0.0.3"}
rten = { version = "0.24.0", features = ["all-ops", "mmap"] }
rten-generate = { version = "0.24.0", features=["text-decoder"] }
rten-text = { version = "0.24.0" }
notify = "6"
sha2 = "0.10"
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "2"
bytes = "1"
futures = "0.3"
moka = { version = "0.12", features = ["sync"] }
parking_lot = "0.12"
num_cpus = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
aes-gcm = "0.10"
base64 = "0.22"
urlencoding = "2"
serde_yaml = "0.9"
hmac = "0.12"
